# Self_Localization_Intelligent_Mapping_SLIM

./: LICENSE  README.md  turtlebot_gazebo_setup.txt
Autonomous-GNC-MAS/: CMakeLists.txt  package.xml
dse_msgs/: CMakeLists.txt  package.xml
dse_msgs/msg/: DDControl.msg  InfFilterPartials.msg  InfFilterResults.msg  PoseMarkers.msg
dse_simulation/: CMakeLists.txt  README.md  package.xml  setup.py
dse_simulation/Debugging data/: .~lock.extrinsic_calibration data.csv#  .~lock.extrinsic_calibration_data_no_bias.ods#  extrinsic_calibration data 500_0.5_calib.ods  extrinsic_calibration data.csv  (+3 more)
dse_simulation_gazebo/: CMakeLists.txt  package.xml
dse_simulation_python/: CMakeLists.txt  package.xml
dse_simulation_real/: CMakeLists.txt  package.xml
dse_turtlebot_descriptions/: CMakeLists.txt  package.xml
dse_turtlebot_descriptions/Media/materials/scripts/: fiducials2.material
dse_turtlebot_descriptions/launch/: my_world.launch  test_robot_tag.launch
dse_turtlebot_descriptions/media/aruco_marker_0/: model.sdf
dse_turtlebot_descriptions/media/aruco_marker_1/: model.sdf
dse_turtlebot_descriptions/media/aruco_marker_2/: model.sdf
dse_turtlebot_descriptions/media/materials/scripts/: aruco_marker_0.material
dse_turtlebot_descriptions/meshes/aruco/: aruco_marker_0.stl  aruco_marker_1.stl  aruco_marker_2.stl  aruco_marker_3.stl  aruco_marker_4.stl  aruco_marker_5.stl  aruco_marker_6.stl  aruco_marker_7.stl  aruco_marker_8.stl  aruco_marker_9.stl
dse_turtlebot_descriptions/meshes/bases/: battleship_hull.stl
dse_turtlebot_descriptions/models/bop_panel/: model.sdf
dse_turtlebot_descriptions/urdf/: battleship_tagged.xacro  my_sdf.sdf  tb3_burger.urdf  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_burger_0.urdf.xacro  turtlebot3_burger_1.urdf.xacro  turtlebot3_burger_2.urdf.xacro  turtlebot3_burger_3.urdf.xacro  turtlebot3_burger_4.urdf.xacro  turtlebot3_burger_5.urdf.xacro  turtlebot3_burger_6.urdf.xacro  turtlebot3_burger_7.urdf.xacro  turtlebot3_burger_8.urdf.xacro  turtlebot3_burger_9.urdf.xacro
dse_turtlebot_descriptions/world/: 3_aruco_landmarks_line.world  test_turtlebot_aruco.world
(+241 files in other folders)
